DO280/kustomize-demo/overlays/prod/helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1
  labels:
    version: v1
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: helloworld
        image: docker.io/istio/examples-helloworld-v2
        resources:
          requests:
            cpu: "200m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
