DO280/kustomize-demo/overlays/prod/helloworld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-v2.apps.ocp4.example.com
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: helloworld
            port: 
              number: 5000
